--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <input placeholder="???" class="d-block m-auto" id="site-url" type="text">
                 </div>
 
-                <div class="add-btn-div mt-3 d-inline-block"><button id="add-btn">ADD</button></div>
+                <div class="add-btn-div mt-3 d-inline-block"><button id="add-btn" class="blocked-cursor">ADD</button></div>
             </div>
             <div class="spans position-absolute overflow-hidden w-100">
             </div>
