--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Bookmarker</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
+
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +43,8 @@
                     <input placeholder="???" class="d-block m-auto" id="site-url" type="text">
                 </div>
 
-                <div class="add-btn-div mt-3 d-inline-block"><button id="add-btn" class="blocked-cursor">ADD</button></div>
+                <div class="add-btn-div mt-3 d-inline-block"><button id="add-btn" class="blocked-cursor">ADD</button>
+                </div>
             </div>
             <div class="spans position-absolute overflow-hidden w-100">
             </div>
