--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
                 <div class="add-btn-div mt-3 d-inline-block"><button id="add-btn" class="blocked-cursor">ADD</button>
                 </div>
             </div>
-            <div class="spans position-absolute overflow-hidden w-100">
+            <div class="spans user-select-none position-absolute overflow-hidden w-100">
             </div>
         </div>
     </header>
 
     <section class="position-relative py-5" id="display">
-        <div dir="rtl" class="spans position-absolute overflow-hidden w-100"></div>
+        <div dir="rtl" class="spans user-select-none position-absolute overflow-hidden w-100"></div>
         <div class="container">
             <div class="head mb-4 row">
                 <div class="col-md-6 text-center text-md-start">
-                    <h2>your websites</h2>
+                    <h2><span id="web-number" class="me-2">0</span>websites </h2>
                 </div>
                 <div dir="rtl" class="col-md-6 d-flex justify-content-center justify-content-md-start">
                     <div class="delete-btn-div">
