--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Bookmarker</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="imgs/favicon.ico">
+    
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
