--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="user-select-none">
     <header class="pt-5 position-relative">
         <div class="container d-flex justify-content-center">
             <div class="bookMarker mt-5 p-3 text-center position-relative">
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div id="websites-container" class="row justify-content-around">
-                <img src="imgs/empty-section.gif" alt="empty-section">
+                <div class="empty-section"></div>
             </div>
         </div>
 
