--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mediaQuery.css">
 </head>
 
 <body class="user-select-none">
@@ -84,9 +85,13 @@
             </div>
         </div>
 
+        <div id="note" class="position-fixed p-3 rounded-3">
+            <h3>Dear user,</h3>
+            <p></p>
+        </div>
+
         <span dir="rtl" class="moataz position-absolute px-5">معتز بالله حسن</span>
     </section>
-
 
     <script src="js/script.js"></script>
 </body>
