--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
 
         <div id="note" class="position-fixed p-3 rounded-3">
-            <h3>Dear user,</h3>
+            <h3>Hey there :)</h3>
             <p></p>
         </div>
 
